fixed glitch on mobile background

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ input[type="color"]:active {
 	top: 0;
 	left: 0;
 	right: 0;
-	bottom: 0;
+	height: 100vh;
 	overflow: hidden;
 	display: flex;
 	transition: opacity 1s;
